[package]
name = "miniserve-axum"
version = "0.1.0"
description = "For when you really just want to serve some files over HTTP right now!"
authors = ["ohmycloud <ohmycloudy@gmail.com>"]
repository = "https://github.com/ohmycloud/miniserve-axum"
license = "MIT"
readme = "README.md"
keywords = ["serve", "http-server", "static-files", "http", "server"]
categories = [
    "command-line-utilities",
    "network-programming",
    "web-programming::http-server",
]
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
strip = true

[dependencies]
alphanumeric-sort = "1.5.3"
anyhow = "1.0.98"
async-walkdir = "2.1.0"
axum = { version = "0.8.4", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
    "macros",
] }
axum-extra = { version = "0.10.1", features = ["multipart"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
bytes = "1.10.1"
bytesize = "2.0.1"
chrono = "0.4.41"
chrono-humanize = "0.2.3"
clap = { version = "4.5.38", features = [
    "derive",
    "cargo",
    "wrap_help",
    "deprecated",
    "env",
] }
clap_complete = "4.5.50"
clap_mangen = "0.2.26"
colored = "3.0.0"
comrak = { version = "0.39.0", default-features = false }
dav-server = "0.8.0"
fast_qr = { version = "0.13.0", features = ["svg"] }
futures = "0.3.31"
grass = { version = "0.13.4", features = ["macro"], default-features = false }
hex = "0.4.3"
httparse = "1.10.1"
if-addrs = "0.13.4"
libflate = "2.1.0"
log = "0.4.27"
maud = "0.27.0"
mime = "0.3.17"
nanoid = "0.4.0"
percent-encoding = "2.3.1"
port_check = "0.2.1"
regex = "1.11.1"
reqwest = { version = "0.12.23", features = ["blocking", "multipart", "json", "rustls-tls"], default-features = false }
rustls = { version = "0.23.27", features = [
    "ring",
    "std",
], optional = true, default-features = false }
rustls-pemfile = { version = "2.2.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
simplelog = "0.12.2"
socket2 = "0.5.9"
strum = { version = "0.27.1", features = ["derive"] }
tar = "0.4.44"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["io"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["full"] }
zip = "3.0.0"

[features]
default = ["tls"]

# This feature allows us to use rustls only on architectures supported by ring.
# See also https://github.com/briansmith/ring/issues/1182
# and https://github.com/briansmith/ring/issues/562
# and https://github.com/briansmith/ring/issues/1367
tls = ["rustls", "rustls-pemfile", "axum-server/tls-rustls"]

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
pretty_assertions = "1.4.1"
rstest = "0.26"
select = "0.6.1"
